# swish-embedded

./: .gitignore  CMakeLists.txt  README.md  prj.conf  sysbuild.conf  thingy53_nrf5340_cpuapp.overlay
MatlabCode/: extendedkalmanfilter.py  imu_data.m  imu_data2.m  storeSensorData.m  storeSensorData2.m
ThingsApplications/imu-stuff/: CMakeLists.txt  prj.conf  thingy53_nrf5340_cpuapp.overlay
ThingsApplications/imu-stuff/src/: main.c
libs/: mahony.c  mahony.h
sensor_data_collection_bno055/: sensor_data_collection_bno055.ino
src/: bluetooth.c  bluetooth.h  bno055_driver.c  bno055_driver.h  button.c  button.h  main.c  onboard_imu.c  onboard_imu.h  quaternion_utils.c  quaternion_utils.h
